voting/result/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
  namespace: voting
spec:
  minReadySeconds: 10
  replicas: 3
  selector:
    matchLabels:
      app: result
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate  
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: andywirtzk8s/voting-result:v1.0
        name: result
        livenessProbe:
          httpGet:
            path: /
            port: http
        livenessProbe:
          httpGet:
            path: /
            port: http
        ports:
        - containerPort: 8080
          name: http
